--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -5,29 +5,44 @@
     align-items: center;
     gap: 40px;
     height: 80vh;
-    margin: 40px auto;
-    max-width: 80vw;
-    border: 1px solid green;
+    margin: 60px auto;
+    max-width: 60vw;
+    box-shadow: 0 15px 16.83px 0.17px rgba(0,0,0,.05);
+    border-radius: 20px;
+    background-color: var(--surface-a);
   }
   .signup-form {
    &-wrapper {
-     border: 1px solid blue;
      width: 100%;
      height: 100%;
-     padding: 20px;
+     padding: 60px;
    }
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
     width: 100%;
   }
-  .illustration-side {
+  .submit-btn {
+    margin-top: 30px;
+  }
+  .page-title {
+    margin-bottom: 40px;
+    margin-top: 0;
+  }
+  .login-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    text-align: center;
+    margin: 0;
+  }
+  .illustration-side {
+    width: 85%;
+    padding-right: 60px;
     img {
       max-width: 500px;
       height: auto;
-      width: 80%;
+      width: 100%;
     }
   }
 }
