--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -1,7 +1,6 @@
 .signup-page {
   .signup-container {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 40px;
     height: 80vh;
@@ -10,12 +9,23 @@
     box-shadow: 0 15px 16.83px 0.17px rgba(0,0,0,.05);
     border-radius: 20px;
     background-color: var(--surface-a);
+    @media(max-width: 1200px) {
+      flex-direction: column;
+      height: fit-content;
+      width: 90%;
+      max-width: 700px;
+      gap: 20px;
+    }
   }
   .signup-form {
    &-wrapper {
-     width: 100%;
      height: 100%;
      padding: 60px;
+     flex: 1;
+     @media(max-width: 1200px) {
+       padding: 30px;
+       width: 90%;
+     }
    }
     display: flex;
     flex-direction: column;
@@ -37,8 +47,11 @@
     margin: 0;
   }
   .illustration-side {
-    width: 85%;
+    flex: 1;
     padding-right: 60px;
+    @media(max-width: 1200px) {
+      padding: 0 0 30px 0;
+    }
     img {
       max-width: 500px;
       height: auto;
