move the auth page styles to be shared on auth pages + add the layout for login page

--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -1,8 +1,8 @@
 <div class="signup-page page-wrapper">
-  <div class="signup-container">
-    <div class="signup-form-wrapper">
+  <div class="auth-container">
+    <div class="auth-form-wrapper">
       <h1 class="page-title">Signup</h1>
-      <form class="signup-form">
+      <form class="auth-form">
         <p-inputGroup>
           <p-inputGroupAddon>
             <i class="pi pi-user"></i>
@@ -33,7 +33,7 @@
     </div>
     <div class="illustration-side">
       <img ngSrc="assets/images/illustration-2.png" alt="auth-illustration" height="500" width="500"/>
-      <p class="login-text">
+      <p class="auth-text">
         Already a member?
         <p-button label="login here"
                   [link]="true"
