--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,3 +1,34 @@
 <div class="login-page page-wrapper">
+  <div class="auth-container">
+    <div class="auth-form-wrapper">
+      <h1 class="page-title">Login</h1>
+      <form class="auth-form">
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-envelope"></i>
+          </p-inputGroupAddon>
+          <input pInputText placeholder="Email" />
+        </p-inputGroup>
+        <p-inputGroup>
+          <p-inputGroupAddon>
+            <i class="pi pi-lock"></i>
+          </p-inputGroupAddon>
+          <input pInputText placeholder="Password" />
+        </p-inputGroup>
 
+        <button pButton pRipple label="Login" class="submit-btn"></button>
+      </form>
+    </div>
+    <div class="illustration-side">
+      <img ngSrc="assets/images/illustration-2.png" alt="auth-illustration" height="500" width="500"/>
+      <p class="auth-text">
+        Already a member?
+        <p-button label="login here"
+                  [link]="true"
+                  [routerLink]="'/auth/signup'"
+                  class="btn-link"></p-button>
+      </p>
+
+    </div>
+  </div>
 </div>
