--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,3 +1,11 @@
-<div>
-  <router-outlet></router-outlet>
+<div class="page-container">
+  <div class="app-side-navigation-container">
+    <app-side-navigation></app-side-navigation>
+  </div>
+  <div class="app-content-container">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="app-right-view-container" [ngClass]="{'visible': isOpen}">
+    <app-side-view-container></app-side-view-container>
+  </div>
 </div>
