--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,32 @@
-<h1>TEST</h1>
+<div class="home-page">
+  <div class="home-page_header">
+    <h3 class="home-page_header_title"><span>Baskety</span> Your Lists, Sorted & Synced Everywhere.</h3>
+    <div class="home-page_header-search-bar">
+      <p-inputGroup>
+        <p-inputGroupAddon>
+          <i class="pi pi-search"></i>
+        </p-inputGroupAddon>
+        <input pInputText placeholder="Search" />
+      </p-inputGroup>
+<!--      <p-autoComplete [(ngModel)]="selectedCity" [group]="true" [suggestions]="filteredGroups" (completeMethod)="filterGroupedCity($event)" placeholder="Hint: type 'a'">-->
+<!--        <ng-template let-group pTemplate="group">-->
+<!--          <div class="flex align-items-center">-->
+<!--            <img src="https://primefaces.org/cdn/primeng/images/demo/flag/flag_placeholder.png" [class]="'mr-2 flag flag-' + group.value" style="width: 20px" />-->
+<!--            <span>{{ group.label }}</span>-->
+<!--          </div>-->
+<!--        </ng-template>-->
+<!--      </p-autoComplete>-->
+    </div>
+  </div>
+  <div class="home-page_content">
+    <div class="items-categories-list">
+      <div class="items-category" *ngFor="let i of [1, 2, 4, 5,6 ]; index as index">
+        <h4 class="category-title">Fruit & Vegetables</h4>
+        <div class="category-items-list">
+          <app-item-card *ngFor="let i of [1, 2, 4, 5,6 ]; index as index"></app-item-card>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
