--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,10 +20,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
 }
 .app-container {
-  border: 1px solid red;
+  height: 100%;
 }
 .page-wrapper {
-  border: 1px solid blue;
 }
 .page-title {
   color: var(--text-color);
