--- a/src/app/shared/components/item-card/item-card.component.scss
+++ b/src/app/shared/components/item-card/item-card.component.scss
@@ -14,6 +14,7 @@
     background-color: transparent;
     box-shadow: none;
     padding: 0;
+    width: 100%;
     .item-card_count-btn {
       background-color: transparent;
     }
@@ -25,12 +26,12 @@
     border: none;
     padding: 10px;
     background-color: var(--bg-color);
-    color: var(--text-color);
+    color: var(--text-color-green);
     cursor: pointer;
   }
   &_name {
     max-width: 100px;
-    color: var(--text-color);
+    color: var(--text-color-green);
   }
   &_count {
     color: var(--soft-accent-color);
@@ -49,16 +50,9 @@
     gap: 10px;
     color: var(--subtle-color);
     transition: all 0.5s ease-in-out;
-    .remove-item, .decrease-count, .increase-count {
-      display: none;
-    }
     &.extended {
-      background-color: transparent;
-      padding: 0;
-      width: 160px;
-      .remove-item, .decrease-count, .increase-count {
-        display: block;
-      }
+      padding: 0 10px 0 0;
+      background-color: #f3f3f2 !important;
       .remove-item {
         background-color: var(--subtle-color);
         color: var(--bg-color);
@@ -78,6 +72,8 @@
     }
     .remove-item, .decrease-count, .increase-count, .item-count {
       cursor: pointer;
+    }
+    .decrease-count, .increase-count, .item-count {
     }
   }
 }
