--- a/src/app/shared/components/side-navigation/side-navigation.component.scss
+++ b/src/app/shared/components/side-navigation/side-navigation.component.scss
@@ -66,7 +66,7 @@
       background-color: var(--primary-color);
       color: var(--bg-color);
       &:hover {
-        background-color: var(--text-color);
+        background-color: var(--text-color-green);
       }
       @media(max-width: 1200px) {
         width: 40px;
