--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,14 +19,7 @@
     </div>
   </div>
   <div class="home-page_content">
-    <div class="items-categories-list">
-      <div class="items-category" *ngFor="let i of [1, 2, 4, 5,6 ]; index as index">
-        <h4 class="category-title">Fruit & Vegetables</h4>
-        <div class="category-items-list">
-          <app-item-card *ngFor="let i of [1, 2, 4, 5,6 ]; index as index"></app-item-card>
-        </div>
-      </div>
-    </div>
+    <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD"></app-items-list-section>
   </div>
 
 </div>
