--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     gap: 20px;
     flex-wrap: wrap;
-    color: var(--text-color);
+    color: var(--text-color-green);
     padding: 50px 0 30px;
     &_title {
       font-weight: 500;
@@ -20,24 +20,6 @@
     }
   }
   &_content {
-    .items-categories-list {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-    .items-category {
-      display: flex;
-      flex-direction: column;
-      .category-title {
-        color: var(--text-color);
-      }
-      .category-items-list {
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        width: 90%;
-        flex-wrap: wrap;
-      }
-    }
+
   }
 }
