Enhance component styling and change style files format + add shopping list component UI

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,11 +1,13 @@
 :root {
-  --text-color: #355259; // previously --primary-color
+  --text-color-green: #355259; // previously --primary-color
   --highlight-color: #e1b630; // previously --secondary-color
   --bg-color: #f9f9f7; // previously --background-color
   --alert-color: #cf554a; // previously --error-color
   --subtle-color: #97aebc; // previously --details-color
   --soft-accent-color: #f0aaa7; // previously --accent-color
   --light-blue: #cfe6e7; // remained the same as it is specific
+  --mint-green-bg: #d1e8e2;
+
 }
 
 
