--- a/src/app/shared/components/shopping-list/shopping-list.component.html
+++ b/src/app/shared/components/shopping-list/shopping-list.component.html
@@ -1,1 +1,28 @@
-<p>shopping-list works!</p>
+<div class="shopping-list_container">
+  <div class="shopping-list_add-item-card_wrapper">
+    <div class="shopping-list_add-item-card">
+      <img ngSrc="./assets/images/add-item-illustration.png" alt="add-item"
+           width="1024" height="1024"/>
+      <div class="shopping-list_add-item-card_content">
+        <p class="shopping-list_add-item-card_content-text">Didn’t find what you need?</p>
+        <p-button class="add-item-btn" label="Add item"></p-button>
+      </div>
+    </div>
+  </div>
+  <div class="shopping-list_content">
+    <div class="shopping-list_content__title">
+        <input type="text" pInputText placeholder="Enter a list title" disabled/>
+        <button type="button" pButton
+                class="p-button-plain" icon="pi pi-pencil"></button>
+    </div>
+    <div class="shopping-list_content__items">
+      <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.EDIT"></app-items-list-section>
+    </div>
+  </div>
+  <div class="shopping-list_footer">
+      <p-button class="cancel-btn"
+                label="Cancel"
+                [link]="true"></p-button>
+      <p-button class="complete-btn" label="Complete"></p-button>
+  </div>
+</div>
