--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 .page-wrapper {
 }
 .page-title {
-  color: var(--text-color);
+  color: var(--text-color-green);
 }
 
 /*!* Accent Font *!*/
