Add dynamic rendering to list components and enhance styles

--- a/src/app/shared/components/item-card/item-card.component.scss
+++ b/src/app/shared/components/item-card/item-card.component.scss
@@ -69,6 +69,7 @@
       padding: 5px 10px;
       color: var(--subtle-color);
       font-weight: bolder;
+      width: 70px;
     }
     .remove-item, .decrease-count, .increase-count, .item-count {
       cursor: pointer;
