--- a/src/app/shared/components/side-view-container/side-view-container.component.html
+++ b/src/app/shared/components/side-view-container/side-view-container.component.html
@@ -1,3 +1,5 @@
 <div class="side-views-container">
-  <app-shopping-list></app-shopping-list>
+<!--  <app-shopping-list></app-shopping-list>-->
+  <app-add-edit-item-form></app-add-edit-item-form>
+<!--  <app-item-details></app-item-details>-->
 </div>
