--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="home-page_content">
-    <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD"></app-items-list-section>
+    <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD" [items]="itemsList"></app-items-list-section>
   </div>
 
 </div>
