--- a/src/app/shared/components/item-card/item-card.component.html
+++ b/src/app/shared/components/item-card/item-card.component.html
@@ -5,7 +5,7 @@
 <!--              id="itemCard"></p-checkbox>-->
 <!-- <label for="itemCard">-->
    <p class="item-card_name">
-     <span>Avocado</span>
+     <span>{{item?.itemName}}</span>
    </p>
    <ng-container [ngSwitch]="mode">
      <ng-template [ngSwitchCase]="ITEM_CARD_MODES.ADD">
@@ -15,7 +15,7 @@
      </ng-template>
      <ng-template [ngSwitchCase]="ITEM_CARD_MODES.VIEW">
        <p class="item-card_count">
-         3 pcs
+         {{item?.itemCount}} pcs
        </p>
      </ng-template>
      <ng-template [ngSwitchCase]="ITEM_CARD_MODES.EDIT">
@@ -26,7 +26,7 @@
          <span class="decrease-count" *ngIf="isCountExtended">
           <i class="pi pi-minus"></i>
         </span>
-        <span class="item-count" (click)="onEditItemCount()">3 pcs</span>
+        <span class="item-count" (click)="onEditItemCount()">{{item?.itemCount}} pcs</span>
         <span class="increase-count" *ngIf="isCountExtended">
           <i class="pi pi-plus"></i>
         </span>
