--- a/src/app/shared/components/items-list-section/items-list-section.component.html
+++ b/src/app/shared/components/items-list-section/items-list-section.component.html
@@ -1,9 +1,9 @@
 <div class="items-list-section">
-  <div class="items-category" *ngFor="let i of [1, 2, 4, 5,6 ]; index as index">
-    <h4 class="category-title">Fruit & Vegetables</h4>
+  <div class="items-category" *ngFor="let category of items;">
+    <h4 class="category-title">{{Object.keys(category)[0]}}</h4>
     <div class="category-items-list" [ngClass]="{'in-list': itemBtnMode === ITEM_CARD_MODES.EDIT}">
-      <app-item-card *ngFor="let i of [1, 2, 4, 5,6 ]; index as index"
-      [mode]="itemBtnMode"></app-item-card>
+      <app-item-card *ngFor="let item of category[Object.keys(category)[0]]"
+      [mode]="itemBtnMode" [item]="item"></app-item-card>
     </div>
   </div>
 </div>
