add history page UI

--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -1,1 +1,148 @@
-<p>history works!</p>
+<div class="history-page">
+  <h3 class="page-title">Shopping history</h3>
+
+  <div class="lists-groups-by-date">
+    <div class="lists-groups-by-date_date-section">
+      <h4 class="lists-groups-by-date_title">August 2008</h4>
+      <div class="list-cards__wrapper">
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"
+                    [routerLink]="'/app/history/1'"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+      </div>
+    </div>
+    <div class="lists-groups-by-date_date-section">
+      <h4 class="lists-groups-by-date_title">August 2008</h4>
+      <div class="list-cards__wrapper">
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+      </div>
+    </div>
+    <div class="lists-groups-by-date_date-section">
+      <h4 class="lists-groups-by-date_title">August 2008</h4>
+      <div class="list-cards__wrapper">
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+        <p-card class="list-card">
+          <p class="list-card__list-title">Grocery List</p>
+          <div class="list-card__info">
+          <span class="list-card__info-date">
+            <i class="pi pi-calendar"></i>
+            <p>Mon 27.8.2020</p>
+          </span>
+            <span class="wrapper">
+            <span class="list-card__info-status completed">Completed</span>
+              <!-- <span class="list-card__info-status canceled">Canceled</span>-->
+          <p-button [link]="true" icon="pi pi-chevron-right"></p-button>
+          </span>
+          </div>
+        </p-card>
+      </div>
+    </div>
+  </div>
+</div>
