--- a/src/app/shared/components/item-card/item-card.component.html
+++ b/src/app/shared/components/item-card/item-card.component.html
@@ -1,4 +1,4 @@
-<div class="item-card" [ngClass]="{'in-list': mode === ITEM_CARD_MODES.VIEW || mode === ITEM_CARD_MODES.EDIT}">
+<div class="item-card" [ngClass]="{'in-list': mode === ITEM_CARD_MODES.EDIT}">
 <!--  <p-checkbox -->
 <!--    [(ngModel)]="checked"-->
 <!--              inputId="itemCard"-->
