--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -25,7 +25,7 @@
     height: fit-content;
     overflow-y: auto;
     @media(max-width: 1200px) {
-      padding-right: 0;
+      padding-right: 40px;
       padding-left: 110px;
     }
   }
