--- a/src/app/shared/components/item-card/item-card.component.scss
+++ b/src/app/shared/components/item-card/item-card.component.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   width: fit-content;
-  padding: 5px 20px;
+  padding: 20px;
   font-size: 16px;
   gap: 40px;
   cursor: pointer;
@@ -24,7 +24,7 @@
   }
   .add-item-btn {
     border: none;
-    padding: 10px;
+    padding: 0 10px;
     background-color: var(--bg-color);
     color: var(--text-color-green);
     cursor: pointer;
