--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -2,21 +2,21 @@
   <div class="auth-container">
     <div class="auth-form-wrapper">
       <h1 class="page-title">Login</h1>
-      <form class="auth-form">
+      <form class="auth-form" [formGroup]="loginForm">
         <p-inputGroup>
           <p-inputGroupAddon>
             <i class="pi pi-envelope"></i>
           </p-inputGroupAddon>
-          <input pInputText placeholder="Email" />
+          <input pInputText placeholder="Email" formControlName="email"/>
         </p-inputGroup>
         <p-inputGroup>
           <p-inputGroupAddon>
             <i class="pi pi-lock"></i>
           </p-inputGroupAddon>
-          <input pInputText placeholder="Password" />
+          <input pInputText placeholder="Password" formControlName="password" type="password"/>
         </p-inputGroup>
 
-        <button pButton pRipple label="Login" class="submit-btn"></button>
+        <button pButton pRipple label="Login" class="submit-btn" (click)="login()" [disabled]="loginForm.invalid"></button>
       </form>
     </div>
     <div class="illustration-side">
