--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -23,7 +23,7 @@
       <img ngSrc="assets/images/illustration-2.png" alt="auth-illustration" height="500" width="500"/>
       <p class="auth-text">
         Already a member?
-        <p-button label="login here"
+        <p-button label="Register here"
                   [link]="true"
                   [routerLink]="'/auth/signup'"
                   class="btn-link"></p-button>
