--- a/src/assets/styles/components/form.scss
+++ b/src/assets/styles/components/form.scss
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  &-row {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    input {
+      width: 150px;
+    }
+  }
   label {
     width: 100%;
     color: var(--primary-color);
