add dynamic view switching functionality to the side-view container. A back button has been implemented to the `add-edit-item-form` component allowing dynamic switching between views

--- a/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
+++ b/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
@@ -1,5 +1,11 @@
 <div class="add-edit-item_container" *ngIf="categoriesList.length > 0">
-  <h3 class="add-edit-item_title">{{isEdit ? 'Edit item' : 'Add a new item'}}</h3>
+    <div class="add-edit-item_header">
+      <p-button icon="pi pi-arrow-left"
+                [link]="true"
+                (onClick)="backInView()"></p-button>
+      <h3 class="add-edit-item_title">{{isEdit ? 'Edit item' : 'Add a new item'}}</h3>
+    </div>
+
   <form class="add-edit-item_form" [formGroup]="itemForm">
     <div class="input-group">
       <label for="item-name">Name</label>
