--- a/src/app/shared/components/side-view-container/side-view-container.component.html
+++ b/src/app/shared/components/side-view-container/side-view-container.component.html
@@ -4,7 +4,7 @@
      <app-shopping-list></app-shopping-list>
    </ng-template>
    <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ADD_EDIT_ITEM">
-     <app-add-edit-item-form></app-add-edit-item-form>
+     <app-add-edit-item-form (onBackInView)="currentView = $event"></app-add-edit-item-form>
    </ng-template>
    <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ITEM_DETAILS">
      <app-item-details></app-item-details>
