--- a/src/app/shared/components/items-list-section/items-list-section.component.html
+++ b/src/app/shared/components/items-list-section/items-list-section.component.html
@@ -1,8 +1,8 @@
 <div class="items-list-section">
   <div class="items-category" *ngFor="let category of items;">
-    <h4 class="category-title">{{Object.keys(category)[0]}}</h4>
+    <h4 class="category-title">{{category.categoryName[0]}}</h4>
     <div class="category-items-list" [ngClass]="{'in-list': itemBtnMode === ITEM_CARD_MODES.EDIT}">
-      <app-item-card *ngFor="let item of category[Object.keys(category)[0]]"
+      <app-item-card *ngFor="let item of category.items"
       [mode]="itemBtnMode" [item]="item"></app-item-card>
     </div>
   </div>
