--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -41,6 +41,9 @@
     background-color: var(--bg-color);
     &.visible {
       right: 0;
+      @media(max-width: 1200px) {
+        display:  block;
+      }
     }
     @media(max-width: 1200px) {
       display: none;
