--- a/src/app/shared/components/side-navigation/side-navigation.component.html
+++ b/src/app/shared/components/side-navigation/side-navigation.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="side-navigation_actions-btn">
-    <button class="btn-icon list-btn" pBadge value="2">
+    <button class="btn-icon list-btn" pBadge value="2" (click)="openSideView(!this.isSideViewOpened)">
       <i class="pi pi-shopping-cart text-3xl"></i>
     </button>
     <button class="btn-icon logout-btn" (click)="onLogout()">
