--- a/src/app/shared/components/shopping-list/shopping-list.component.html
+++ b/src/app/shared/components/shopping-list/shopping-list.component.html
@@ -5,7 +5,7 @@
            width="1024" height="1024"/>
       <div class="shopping-list_add-item-card_content">
         <p class="shopping-list_add-item-card_content-text">Didn’t find what you need?</p>
-        <p-button class="add-item-btn" label="Add item"></p-button>
+        <p-button class="add-item-btn" label="Add item" (onClick)="navigateToAddingItemView()"></p-button>
       </div>
     </div>
   </div>
