Update ItemDetailsComponent to use SideViewsService

--- a/src/app/shared/components/item-details/item-details.component.html
+++ b/src/app/shared/components/item-details/item-details.component.html
@@ -1,4 +1,4 @@
-<div class="item-details_container">
+<div class="item-details_container" *ngIf="sideViewsService.itemDetails()">
   <div class="item-details_header">
     <p-button [link]="true" icon="pi pi-arrow-left" />
     <span class="item-details_header-actions">
@@ -7,27 +7,28 @@
     </span>
   </div>
   <div class="item-details_wrapper">
-    <img ngSrc="assets/images/shopping-list-illustration.png" width="1024" height="1024" alt="item-img"/>
+    <img ngSrc="assets/images/shopping-list-illustration.png"
+         width="1024" height="1024" alt="item-img"/>
     <div class="item-info">
       <p class="item-info-label">
         name
       </p>
-      <p class="item-info-value">item name</p>
+      <p class="item-info-value">{{sideViewsService.itemDetails()?.name || '-'}}</p>
     </div>
     <div class="item-info">
       <p class="item-info-label">
         categroy
       </p>
-      <p class="item-info-value">item name</p>
+      <p class="item-info-value">{{sideViewsService.itemDetails()?.category || '-'}}</p>
     </div>
     <div class="item-info">
       <p class="item-info-label">
         description
       </p>
-      <p class="item-info-value">item name</p>
+      <p class="item-info-value">{{sideViewsService.itemDetails()?.description || '-'}}</p>
     </div>
   </div>
   <div class="item-details_actions">
-    <p-button label="Add to list" class="add-btn"></p-button>
+    <p-button label="Add to list" class="add-btn" (onClick)="addItemToList()"></p-button>
   </div>
 </div>
