--- a/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
+++ b/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
@@ -18,7 +18,7 @@
                   placeholder="Select a category"
                   optionLabel="name"
                   optionValue="_id"
-                  formControlName="category"
+                  formControlName="categoryId"
                   [options]="categoriesList"></p-dropdown>
       <small class="p-error">{{getFormValidationErrors(itemForm.get('category'))}}</small>
 
