--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,7 +19,12 @@
     </div>
   </div>
   <div class="home-page_content">
-    <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD" [items]="itemsList"></app-items-list-section>
+    <p-progressSpinner ariaLabel="loading" animationDuration=".5s"
+                       *ngIf="isLoading"></p-progressSpinner>
+
+    <app-items-list-section *ngIf="!isLoading"
+                            [itemBtnMode]="ITEM_CARD_MODES.ADD"
+                            [items]="itemsList"></app-items-list-section>
   </div>
 
 </div>
